<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puzzle_logo"
        android:textSize="80sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="@dimen/text_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"/>

    <Button
        android:id="@+id/btnTurkish"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/turkish"
        android:textSize="@dimen/text_button"
        android:textColor="@color/white"
        android:background="@drawable/btn_primary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/selectText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/english"
        android:textSize="@dimen/text_button"
        android:textColor="@color/white"
        android:background="@drawable/btn_secondary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btnTurkish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
